--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,5 @@
 /* -----------------------------------------------------------------
-1. Make responsive for mobiles for bonus marks
-
-2. "some facts section" e mouse nile kichu ekta korte ghotbe!
-
-3. "10+ Year Experience" button/div/text etake upore tulte hobe!
-
 4. Sponsor er niche ba kothao ekta meaningful section
-
-5. Meaningful html+css and comments!
-
-bootstrap for mobile screen 576px
 ----------------------------------------------------------------- */
 
 /* Universal Styles below */
@@ -18,6 +8,19 @@ bootstrap for mobile screen 576px
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
+}
+
+.section-title {
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.section-description {
+    padding-bottom: 30px;
+    color: #727272;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .btn-primary {
@@ -31,6 +34,10 @@ bootstrap for mobile screen 576px
     border: none;
 }
 
+.fact:hover {
+    transform: scale(125%);
+}
+
 /* Header and Navbar styles below */
 
 header {
@@ -38,17 +45,19 @@ header {
 }
 
 nav {
+    max-width: 1440px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 50px 240px 100px 228px;
+    margin: auto;
 }
 
-.nav-title {
+/* .nav-title {
     color: #131313;
     font-size: 45px;
     font-weight: 700;
-}
+} */
 
 nav ul {
     display: flex;
@@ -67,33 +76,28 @@ a {
 }
 
 /* Banner Styles Below */
+
 .banner {
     text-align: center;
 }
 
-.section-content {
+.banner-section-content {
     width: 860px;
-    margin: 0px 530px 50px 530px;
+    margin: auto;
 }
 
-.section-title {
+.banner-section-title {
     color: #131313;
     font-size: 64px;
     font-weight: 700;
-    margin-bottom: 30px;
-}
-
-.section-description {
-    margin-bottom: 30px;
-    color: #727272;
-    font-size: 16px;
-    font-weight: 400;
+    padding-bottom: 30px;
 }
 
 .banner-image {
     width: 1440px;
     height: 700px;
     margin-bottom: 45px;
+    margin-top: 50px;
 }
 
 /* Main styles below */
@@ -136,4 +140,159 @@ main {
     color: #FF900E;
     font-size: 45px;
     font-weight: 700;
+}
+
+/* Feature list styles */
+
+.feature-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 54px;
+    margin-top: 130px;
+}
+
+.feature-list-content {
+    width: 586px;
+}
+
+.vertical-line {
+    width: 5px;
+    height: 106px;
+    border-left: 6px solid #FF900E;
+}
+
+.feature-list-heading {
+    display: flex;
+    justify-content: center;
+    gap: 21px;
+    margin-bottom: 24px;
+}
+
+.feature-list-heading .section-title {
+    font-size: 45px;
+}
+
+.section-subtitle {
+    margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 20px;
+    color: #131313;
+}
+
+.feature-list .section-description {
+    margin-bottom: 30px;
+}
+
+.feature-box {
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    padding: 30px 40px 0 30px;
+    margin-bottom: 20px;
+}
+
+/* Experience styles below */
+
+.experience-container {
+    margin: auto;
+    text-align: center;
+    width: 342px;
+    height: 200;
+    background-color: #FF900E;
+    border-radius: 8px;
+    position: relative;
+    top: -150px;
+    right: -80px;
+}
+
+.experience-content {
+    padding: 42px;
+}
+
+.experience-title {
+    color: #FFFFFF;
+    font-size: 65px;
+    font-weight: 700;
+}
+
+.experience-description {
+    font-size: 25px;
+    font-weight: 500;
+    color: #FFFFFF;
+}
+
+/* Facts style below */
+.facts-section{
+    margin-bottom: 180px;
+}
+
+.facts-section-content {
+    width: 542px;
+}
+
+.facts-section-content .section-title {
+    margin-bottom: 24px;
+}
+
+.facts {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+}
+
+.fact {
+    padding: 45px 36px;
+    text-align: center;
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    transition: transform 1s;
+}
+
+.fact-title{
+    color: #424242;
+    font-size: 45px;
+    font-weight: 600;
+    padding-bottom: 0;
+}
+
+.fact-description{
+    color: #727272;
+    font-size: 20px;
+    font-weight: 600;
+    padding-bottom: 0px;
+}
+
+/* Sponsors styles below */
+
+.sponsors-section-content {
+    text-align: center;
+    width: 542px;
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.sponsors-logo {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 130px;
+}
+
+/* Clients testimonial styles below */
+
+
+
+/* Footer Styles below */
+
+.footer {
+    margin: auto;
+    text-align: center;
+    width: 1440px;
+    background: #FFF4E7;
+    border-radius: 8px;
+}
+
+.footer .section-description {
+    padding-top: 38px;
+    font-size: 20px;
+    margin-bottom: 216px;
 }
