--- a/styles/style.css
+++ b/styles/style.css
@@ -34,10 +34,6 @@
     border: none;
 }
 
-.fact:hover {
-    transform: scale(125%);
-}
-
 /* Header and Navbar styles below */
 
 header {
@@ -52,12 +48,6 @@ nav {
     padding: 50px 240px 100px 228px;
     margin: auto;
 }
-
-/* .nav-title {
-    color: #131313;
-    font-size: 45px;
-    font-weight: 700;
-} */
 
 nav ul {
     display: flex;
@@ -248,6 +238,10 @@ main {
     transition: transform 1s;
 }
 
+.fact:hover {
+    transform: scale(125%);
+}
+
 .fact-title{
     color: #424242;
     font-size: 45px;
@@ -279,7 +273,52 @@ main {
 
 /* Clients testimonial styles below */
 
+.testimonial-section{
+    margin-bottom: 130px;
+}
+.testimonial-section h2 p{
+    text-align: center;
+}
 
+.testimonial-content {
+    margin: auto;
+    width: 542px;
+    text-align: center;
+}
+
+.testimonial-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;    
+}
+
+.testimonials {
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    width: 300px;
+    height: 300px;
+    background: #FFF4E7;
+    margin-top: 76px;
+    padding: 30px;
+    transform: rotate(-6deg);
+}
+
+.testimonials:hover {
+    transform: scale(125%) rotate(0deg);
+    transition: transform 1s;
+}
+
+.testimony {
+    font-size: 30px;
+    font-weight: 600;
+    color: #727272;
+}
+
+.client-name{
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: 400;
+    color: #727272;
+}
 
 /* Footer Styles below */
 
@@ -296,3 +335,4 @@ main {
     font-size: 20px;
     margin-bottom: 216px;
 }
+
