--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-/* -----------------------------------------------------------------
-4. Sponsor er niche ba kothao ekta meaningful section
------------------------------------------------------------------ */
-
 /* Universal Styles below */
 
 * {
@@ -212,7 +208,8 @@ main {
 }
 
 /* Facts style below */
-.facts-section{
+
+.facts-section {
     margin-bottom: 180px;
 }
 
@@ -242,14 +239,14 @@ main {
     transform: scale(125%);
 }
 
-.fact-title{
+.fact-title {
     color: #424242;
     font-size: 45px;
     font-weight: 600;
     padding-bottom: 0;
 }
 
-.fact-description{
+.fact-description {
     color: #727272;
     font-size: 20px;
     font-weight: 600;
@@ -273,10 +270,11 @@ main {
 
 /* Clients testimonial styles below */
 
-.testimonial-section{
+.testimonial-section {
     margin-bottom: 130px;
 }
-.testimonial-section h2 p{
+
+.testimonial-section h2 p {
     text-align: center;
 }
 
@@ -286,10 +284,10 @@ main {
     text-align: center;
 }
 
-.testimonial-container{
+.testimonial-container {
     display: flex;
     justify-content: space-around;
-    align-items: center;    
+    align-items: center;
 }
 
 .testimonials {
@@ -313,7 +311,7 @@ main {
     color: #727272;
 }
 
-.client-name{
+.client-name {
     margin-top: 20px;
     font-size: 20px;
     font-weight: 400;
@@ -336,3 +334,74 @@ main {
     margin-bottom: 216px;
 }
 
+/* Media query styles below */
+/* This media query built upon "iPhoneXR" dimension*/
+
+@media screen and (max-width: 576px) {
+
+    nav,
+    .banner-section-content,
+    .banner-image,
+    main,
+    .feature-list-content,
+    .facts-section-content,
+    .sponsors-section-content,
+    .testimonial-content,
+    .footer {
+        width: 100%;
+    }
+
+    nav,
+    nav ul,
+    .testimonial-container,
+    .sponsors-logo,
+    .facts,
+    .feature-list,
+    .features {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .feature-list-image {
+        width: 100%;
+    }
+
+    .navbar {
+        padding: 50px 0 50px 0;
+    }
+
+    .banner-image {
+        height: 50%;
+    }
+
+    .feature-images {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .feature-content {
+        text-align: center;
+    }
+
+    .feature-list-content > .section-description {
+        margin-left: 24px;
+    }
+
+    .experience-container {
+        text-align: center;
+        top: 0;
+        right: 0;
+        margin: 50px;
+    }
+
+    .facts-section-content {
+        margin-left: 20px;
+    }
+
+    .sponsor {
+        width: 50%;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+
+}
